Small fix to the form container alignment

--- a/css/style.css
+++ b/css/style.css
@@ -175,7 +175,7 @@ svg {
 	flex: 0 0 65%;
 	position: relative;
 	top: 50%;
-	max-width: 760px;
+	max-width: 770px;
 	margin: auto;
 	transform: translateY(-50%);
 }
